<resources>
    <string name="app_name">MobileLabWork1</string>
    <string name="title_one">Обратная связь</string>
    <string name="name_introduction">Ваше имя</string>
    <string name="number_introduction">Номер телефона</string>
    <string name="email_introduction">Ваш e-mail адрес</string>
    <string name="name_hint">Введите имя…</string>
    <string name="number_hint">Введите номер телефона…</string>
    <string name="email_hint">Введите электронную почту…</string>
    <string name="topic_hint">Тема обращения</string>
    <string name="comment_hint">Комментарий</string>
    <string name="agreement_text">Я даю согласие на обработку своих <br> </br>персональных данных. С <a href="link">политикой обеспечения<br> </br>безопасности</a>
        персональных данных САО <br> </br>"РЕСО-Гарантия" ознакомлен.</string>





    <string name="entry_welcoming">войти или <br> </br>зарегистрироваться</string>
    <string name="instruction_text">Мы отправим на номер SMS-сообщение <br> </br>с кодом подтверждения</string>
    <string name="phone_number_hint_activity_two">+7 (___) ___ - __ - __</string>
    <string name="get_code_text">Получить код</string>
    <string name="agreement_activity_two">При входе вы соглашаетесь <a href="link">с условиями</a></string>






    <string name="profile_title">Профиль</string>
    <string name="email_header">Email</string>
    <string name="email_invitation">Укажите e-mail</string>
    <string name="password_header">Ваш пароль для контакт-центра</string>
    <string name="password">D9E6F</string>
    <string name="info_text">Бонусы к аннулированию в феврале (на<br> </br>основании расчётов от 25.01.2021): <br> </br>Если вы производили списания в феврале,<br> </br>
    количество бонусов к аннулированию<br> </br>уменьшится на количество<br> </br>бонусов</string>
    <string name="empty_space"> </string>



    <string name="settings_header">Настройки</string>
    <string name="sw_push_notification">Push-уведомления</string>
    <string name="sw_city_definition">Определять город автоматически</string>
    <string name="sw_fingertip_entry">Вход по отпечатку пальца</string>
    <string name="button_auth_set_null">Сбросить авторизацию</string>
    <string name="info_bottom">Версия приложения 4.41.2</string>



</resources>