<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:title="@string/settings_header"
        android:background="@color/green"
        android:titleTextColor="@color/white"
        />

    <androidx.appcompat.widget.SwitchCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sw_push_notification"
        android:textSize="20sp"
        android:padding="25dp"

        />

    <androidx.appcompat.widget.SwitchCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sw_city_definition"
        android:textSize="20sp"
        android:padding="25dp"

        />

    <androidx.appcompat.widget.SwitchCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sw_fingertip_entry"
        android:textSize="20sp"
        android:padding="25dp"

        />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/button_auth_set_null"
        android:backgroundTint="@color/green"
        android:textColor="@color/white"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_bottom"
        android:layout_gravity="bottom|center_horizontal"/>

</LinearLayout>