<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.Design.NoActionBar"
    >

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="50dp"
            android:layout_height="40dp"
            app:srcCompat="@drawable/ic_back_icon_2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_title"
            android:layout_marginStart="40dp"
            android:padding="10dp"
            android:textSize="25sp"
            />

    </Toolbar>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_header"
        android:textColor="@color/dark_grey"
        android:textSize="15sp"
        android:lineSpacingExtra="15dp"
        android:padding="15dp"
        android:backgroundTint="@color/grey"
        android:background="@color/grey"
        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:text="@string/email_invitation"
        android:textAlignment="textStart"
        android:textColor="@color/orange">

        <!--<ImageView
            android:id="@+id/edit_button"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_gravity="end"
            app:srcCompat="@drawable/ic_edit_icon" />-->

    </EditText>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password_header"
                android:textColor="@color/dark_grey"
                android:textSize="15sp"
                android:lineSpacingExtra="15dp"
                android:padding="15dp"
                android:backgroundTint="@color/grey"
                android:background="@color/grey"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:lineSpacingExtra="15dp"
                android:padding="15dp"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/empty_space"
                android:textColor="@color/dark_grey"
                android:textSize="15sp"
                android:lineSpacingExtra="15dp"
                android:padding="15dp"
                android:backgroundTint="@color/grey"
                android:background="@color/grey"
                />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/info_text"
        android:textColor="@color/grey"
        android:textSize="12sp"

        >

    </TextView>


</LinearLayout>