<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        >

    <ImageView
        android:id="@+id/close_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="top|end"
        app:srcCompat="@drawable/ic_close_icon" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entry_welcoming"
        android:layout_marginStart="10dp"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instruction_text"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:lineSpacingExtra="5dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        />


    <EditText
        android:id="@+id/phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/phone_number_hint_activity_two"
        android:singleLine="true"
        android:inputType="phone"
        />


    <Button
        android:id="@+id/get_code_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/get_code_text"
        android:textColor="@color/white" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:text="@string/agreement_activity_two"
        android:textColorLink="#4A3310" />



</LinearLayout>
